Modificación en página web de datos de contacto

--- a/TP-Web1/tpe parte 1/nosotros.html
+++ b/TP-Web1/tpe parte 1/nosotros.html
@@ -107,7 +107,7 @@
     <div class="container-footer">
         <div class="columnaI">
             <h2 class="columna--title">Contáctanos</h2>
-            <p class="columna--txt"><i class="fas fa-map-marker-alt"></i> 14 de julio 335 - Tandil - Argentina</p>
+            <p class="columna--txt"><i class="fas fa-map-marker-alt"></i>   Las Heras 300 - Tandil - Argentina</p>
             <p class="columna--txt"><i class="fas fa-phone"></i> +02266444633</p>
             <p class="columna--txt"><i class="far fa-envelope"></i>  El rey del bajon.@hotmail.com</p>
         </div>
